@@ -2,8 +2,6 @@ package com.sprint.project.nurseoncallroom.service.implementation;
 
 import com.sprint.project.nurseoncallroom.dto.response.RoomResponseDTO;
 import com.sprint.project.nurseoncallroom.entity.RoomEntity;
-
-import com.sprint.project.nurseoncallroom.exception.*;
 import com.sprint.project.nurseoncallroom.repository.RoomRepository;
 import com.sprint.project.nurseoncallroom.service.RoomService;
 
@@ -11,7 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -19,21 +16,27 @@ public class RoomServiceImpl implements RoomService {
 
     private final RoomRepository roomRepository;
 
+    // ✅ Constructor Injection (Best Practice)
     public RoomServiceImpl(RoomRepository roomRepository) {
         this.roomRepository = roomRepository;
     }
 
-    private RoomResponseDTO toDTO(RoomEntity e) {
+    // 🔥 COMMON MAPPER METHOD (Single source of truth)
+    private RoomResponseDTO mapToRoomDTO(RoomEntity e) {
+
         RoomResponseDTO dto = new RoomResponseDTO();
+
         dto.setRoomNumber(e.getRoomNumber());
         dto.setType(e.getType());
         dto.setUnavailable(e.getUnavailable());
 
+        // ✅ Map Block details
         if (e.getBlock() != null) {
             dto.setBlockFloor(e.getBlock().getBlockFloor());
             dto.setBlockCode(e.getBlock().getBlockCode());
             dto.setBlockName(e.getBlock().getName());
         }
+
         return dto;
     }
 
@@ -42,40 +45,44 @@ public class RoomServiceImpl implements RoomService {
     @Transactional(readOnly = true)
     public List<RoomResponseDTO> getAllRooms() {
 
-        List<RoomEntity> rooms = roomRepository.findAll();
-
-        if (rooms.isEmpty()) {
-            throw new BlockCapacityFullException(0, 0); // changed
-        }
-
-        return rooms.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        return roomRepository.findAll()
+                .stream()
+                .map(this::mapToRoomDTO)
+                .toList();
     }
 
-    // ✅ GET ROOM BY NUMBER
+    // ✅ GET ROOM BY ID
     @Override
     @Transactional(readOnly = true)
     public RoomResponseDTO getRoomByNumber(Integer roomNumber) {
 
         RoomEntity room = roomRepository.findById(roomNumber)
-                .orElseThrow(() -> new NurseNotAvailableException(roomNumber)); // changed
+                .orElse(null);
 
-        return toDTO(room);
+        if (room == null) {
+            return null; // you can later replace with custom exception
+        }
+
+        return mapToRoomDTO(room);
     }
 
-    // ✅ UPDATE ROOM
+    // ✅ UPDATE ROOM AVAILABILITY
     @Override
     public RoomResponseDTO updateRoomAvailability(Integer roomNumber, Boolean unavailable) {
 
         RoomEntity room = roomRepository.findById(roomNumber)
-                .orElseThrow(() -> new NurseNotAvailableException(roomNumber)); // changed
+                .orElse(null);
 
+        if (room == null) {
+            return null;
+        }
+
+        // ✅ Update only if changed
         if (!room.getUnavailable().equals(unavailable)) {
             room.setUnavailable(unavailable);
             room = roomRepository.save(room);
         }
 
-        return toDTO(room);
+        return mapToRoomDTO(room);
     }
 }
